Correcao testes, limpezas e melhoria no build